@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: display alchemy's index.
+Nicolas Weeger 2010-06-06
+
 Use 'const' for parameters.
 Nicolas Weeger 2010-06-06
 
